Menu Button Pattern: Add Up Arrow Documentation
Modified aria-practices.html per feedback from @jared-w-smith in issue #384 to add optional up arrow key behavior for menubutton:
(Optional) <kbd>Up Arrow</kbd>: opens the menu and moves focus to the last menu item.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1512,9 +1512,10 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
         <ul>
           <li>With focus on the button:
             <ul>
-              <li><kbd>Enter</kbd>: opens the menu and places focus on the first menu item. </li>
-              <li><kbd>Space</kbd>: Opens the menu and places focus on the first menu item. </li>
-              <li>(Optional) <kbd>Down Arrow</kbd>: opens the menu and moves focus to the first menu item. </li>
+              <li><kbd>Enter</kbd>: opens the menu and places focus on the first menu item.</li>
+              <li><kbd>Space</kbd>: Opens the menu and places focus on the first menu item.</li>
+              <li>(Optional) <kbd>Down Arrow</kbd>: opens the menu and moves focus to the first menu item.</li>
+              <li>(Optional) <kbd>Up Arrow</kbd>: opens the menu and moves focus to the last menu item.</li>
             </ul>
           </li>
           <li>The keyboard behaviors needed after the menu is open are described in <a href="#menu"></a>.</li>
