removed aria-label from menuitems

--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -47,7 +47,7 @@
         <ul id="menubar1" role="menubar" aria-label="Mythical University Menu 1">
           <li>
             <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">About</a>
-            <ul role="menu" aria-label="About">
+            <ul role="menu">
               <li role="none">
                 <a role="menuitem" href="mb-about.html#overview">Overview</a>
               </li>
@@ -58,7 +58,7 @@
                 <a id="menubar113" role="menuitem" href="#" aria-haspopup="true"
                   aria-expanded="false"
                 >Facts</a>
-                <ul role="menu" aria-label="facts">
+                <ul role="menu">
                   <li role="none">
                     <a role="menuitem" href="mb-about.html#facts">History</a>
                   </li>
@@ -72,7 +72,7 @@
               <li>
                 <a role="menuitem" href="#" aria-haspopup="true" aria-expanded="false">Campus
                   Tours</a>
-                <ul role="menu" aria-label="Campus Tours">
+                <ul role="menu">
                   <li role="none">
                     <a role="menuitem" href="mb-about.html#tours">For prospective students</a>
                   </li>
@@ -87,7 +87,7 @@
           </li>
           <li>
             <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Admissions</a>
-            <ul role="menu" aria-label="admissions">
+            <ul role="menu">
               <li role="none">
                 <a role="menuitem" href="mb-admissions.html#apply">Apply</a>
               </li>
@@ -111,7 +111,7 @@
           </li>
           <li>
             <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Academics</a>
-            <ul role="menu" aria-label="Academics">
+            <ul role="menu">
               <li role="none">
                 <a role="menuitem" href="mb-academics.html#colleges">Colleges &amp; Schools</a>
               </li>
