--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -47,7 +47,7 @@
     <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label" aria-label="Start of"></div>
     <div id="ex1">
       <ul id="menubar1" role="menubar" aria-label="Text Formatting">
-        <li role="menuitem" aria-haspopup="true" aria-expanded="false" aria-label="Font">
+        <li role="menuitem" aria-haspopup="true" aria-expanded="false">
           <span>Font</span>
           <ul role="menu" rel="font-family" aria-label="Font" >
             <li role="menuitemradio" aria-checked="true">Sans-serif</li>
@@ -56,7 +56,7 @@
             <li role="menuitemradio" aria-checked="false">Fantasy</li>
           </ul>
         </li>
-        <li role="menuitem" aria-haspopup="true" aria-expanded="false" aria-label="Style/Color">
+        <li role="menuitem" aria-haspopup="true" aria-expanded="false">
           <span>Style/Color</span>
           <ul role="menu" aria-label="Style/Color">
             <li role="menuitemcheckbox" rel="font-bold" aria-checked="false">Bold</li>
@@ -80,7 +80,7 @@
           </ul>
         </li>
 
-        <li role="menuitem" aria-haspopup="true" aria-expanded="false" aria-label="Text Align">
+        <li role="menuitem" aria-haspopup="true" aria-expanded="false">
           <span>Text Align</span>
           <ul role="menu" rel="text-align" aria-label="Text Align">
             <li role="menuitemradio" aria-checked="true">Left</li>
@@ -90,7 +90,7 @@
           </ul>
         </li>
 
-        <li role="menuitem" aria-haspopup="true" aria-expanded="false" aria-label="Size">
+        <li role="menuitem" aria-haspopup="true" aria-expanded="false">
           <span>Size</span>
           <ul role="menu" aria-label="Size" >
             <li role="menuitem" rel="font-smaller">Smaller</li>
